[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/simulator",
    "crates/searcher",
    "crates/strategy",
    "crates/executor",
]

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] } 
serde_json = "1.0.137"
anyhow = "1.0"
dotenv = "0.15"
hex = "0.4"
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }

# --- ALLOY (The Weapon) ---
alloy = { version = "1.3.0", features = ["full", "node-bindings", "rpc-types-eth", "providers", "signers", "signer-local", "transports", "transport-ws"] }
alloy-primitives = "1.5.2" 

# --- REVM (The Engine) ---
revm = { version = "33.1.0", features = ["std", "secp256k1", "optional_balance_check"] }
revm-primitives = { version = "21.0.2", features = ["std"] }

# --- ASYNC & UTILS ---
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
derive_more = { version = "2.1.1", features = ["full"] }