[package]
name = "mev-searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
mev-common = { path = "../common" }
mev-strategy = { path = "../strategy" }
mev-executor = { path = "../executor" }

alloy = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }