[package]
name = "mev-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
mev-common = { path = "../common" }

alloy = { workspace = true }
alloy-primitives = { workspace = true }
revm = { workspace = true }
revm-primitives = { workspace = true }
derive_more = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }